[package]
name = "axumite"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lucasmerlin/axumite"
homepage = "https://github.com/lucasmerlin/axumite"
authors = [
    "RedstoneWizard08",
    "Rexicon226",
    "cheese3660",
    "Wormhole Contributors",
    "lucasmerlin",
]

[dependencies]
axum-core = { version = "0.5.5" }
futures-util = { version = "0.3.31" }
http = { version = "1.3.1" }
hyper-util = { version = "0.1.17", features = ["tokio"] }
hyper = { version = "1.7.0" }
tokio-tungstenite = { version = "0.28.0" }
async-trait = { version = "0.1.89" }
sha-1 = { version = "0.10.1" }
bytes = { version = "1.10.1" }
base64 = { version = "0.22.1" }
tokio = { version = "1.48.0" }
